--- a/view/lk.html
+++ b/view/lk.html
@@ -1,6 +1,10 @@
 <html>
 	<head></head>
 	<body style="height:100vh">
-<script src="bundle.js"></script>
+	  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, deserunt aut. Temporibus labore sit nostrum excepturi eveniet obcaecati iste in magnam quia quisquam, eos quod officiis illo officia ex perspiciatis!</p>
+		<script src="/socket.io/socket.io.js"></script>
+		<script>
+		var socket=io.connect(window.location.origin);
+		</script>
 	</body>
 </html>
